--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #mysql set
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/nmomg
+spring.datasource.url=jdbc:mysql://172.30.1.56:3306/nmomg
 spring.datasource.username=NMOMG
 spring.datasource.password=123
 
