--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ group = 'com.project'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
 
+configurations {
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
+}
+
 repositories {
 	mavenCentral()
 }
