--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 #mysql set
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/sonyuna
-spring.datasource.username=java
-spring.datasource.password=mysql
-
+spring.datasource.url=jdbc:mysql://172.30.1.56:3306/nmomg
+spring.datasource.username=NMOMG
+spring.datasource.password=123
 #mybatis
 mybatis.config=mybatis-config.xml
 mybatis.type-aliases-package: com.study.springboot.model
