--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://172.30.1.56:3306/nmomg
 spring.datasource.username=NMOMG
 spring.datasource.password=123
+
 #mybatis
 mybatis.config=mybatis-config.xml
 mybatis.type-aliases-package: com.study.springboot.model
-mybatis.mapper-locations: mybatis/mapper/*.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 
 logging.level.org.springframework=info
 logging.level.com.study=debug
