1,앱구조에 리소스,타임리프 리프래시 기능 추가 2, 폰트 poppins로 바꿈 3,메인페이지에 로그인 틀 추가 및 디자인 완성.[db소스 넣어야함],카카오 등 로그인 api 넣어야함. 4.회원가입 만든거 index에 넣었음. ui수정은 나중에. 5.write.html를 index page에 넣기 쉽게 사이즈 및 ui 조절.
게시판 paging하는거랑 mapping할게 생각보다 작업량이 많아서 보류했음.
-by han

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
 
 logging.level.org.springframework=info
 logging.level.com.study=debug
+
+# Resource and Thymeleaf Refresh
+spring.devtools.livereload.enabled=true
+spring.thymeleaf.cache=false
